<resources>
    <string name="app_name">firstApp</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="please_enter_the_kilos">Please enter the kilos</string>
    <string name="convert_now">Convert Now</string>
    <string name="_0">0</string>
</resources>